src/mainwindow.cpp
@@ -44,6 +44,7 @@ void MainWindow::init()
 {
     QWidget* viewWidget = QWidget::createWindowContainer(m_view, this);
     viewWidget->setMinimumSize(1000, 700);
+    viewWidget->setFocusPolicy(Qt::StrongFocus);
     setCentralWidget(viewWidget);
 
     Application::setupDeclarativeBindings(m_view->engine());
